fix horizontal scrolling on code blocks

--- a/themes/pdp80-theme/assets/css/pdp.css
+++ b/themes/pdp80-theme/assets/css/pdp.css
@@ -404,6 +404,7 @@ svg {
   background-color: rgb(37, 39, 57);
   padding: 0px 20px 0px 20px;
   margin-bottom: 10px;
+  overflow-x: auto;
 }
 
 @media (prefers-color-scheme: dark) {
